[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -390, -23 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.952941, 0.490196, 0.490196, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="MoneyBoard" type="Panel" parent="VBoxContainer"]
margin_right = 819.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MoneyBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "You got too suspicous and went to jail :(

Game over!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 819.0
margin_bottom = 389.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoneyBoard2" type="Panel" parent="VBoxContainer/HBoxContainer"]
margin_right = 535.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.92

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MoneyBoard2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Total Â£ you earned:"
align = 1
valign = 1

[node name="MoneyBoard3" type="Panel" parent="VBoxContainer/HBoxContainer"]
margin_left = 539.0
margin_right = 819.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AllProfit" type="Label" parent="VBoxContainer/HBoxContainer/MoneyBoard3"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 393.0
margin_right = 819.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45

[node name="NewGameButton" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 819.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.63
text = "Start from the beginning"

[connection signal="pressed" from="VBoxContainer/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
